--- a/presentation.tex
+++ b/presentation.tex
@@ -134,6 +134,7 @@ ICML 2021
 
 \input{sections/feature_distribution_smoothing}
 
+\sectionframe{Experimental setup}
 \input{sections/baselines}
 
 \input{sections/results}
