--- a/sections/diverse_skewed_label_densities.tex
+++ b/sections/diverse_skewed_label_densities.tex
@@ -1,12 +1,12 @@
 %\begin{frame}{Ablation: robustness to diverse skewed label densities}
 %\end{frame}
 
-\begin{frame}{Could LDS + FDS help when the label distribution is skewed with one or more Gaussian peaks?}
+\begin{frame}{Could LDS + FDS help when label distribution is skewed with one or more Gaussian peaks?}
 	\begin{itemize}\setlength\itemsep{1.5em}
 		\item Experimental setup
 		\begin{itemize}
 			\item Curated skewed label distributions with 1-4 Gaussian peaks on IMDB-WIKI-DIR
-			\item Compared with the vanilla model
+			\item Compared with vanilla model
 		\end{itemize}
 		\item Findings
 		\begin{itemize}
@@ -19,7 +19,7 @@
 \begin{frame}{Skewed label distribution with one Gaussian peak}
 	\begin{figure}[h]
 		\includegraphics[width=0.7\linewidth]{images/interp_extrap_diff_peak1.pdf}
-		\caption{MAE gains of LDS + FDS over the vanilla model.}
+		\caption{MAE gains of LDS + FDS over vanilla model.}
 	\end{figure}
 	\begin{itemize}
 		\item Performance gains, esp. for extrapolation \& interpolation
@@ -30,7 +30,7 @@
 \begin{frame}{Skewed label distribution with two Gaussian peaks}
 	\begin{figure}[h]
 		\includegraphics[width=0.7\linewidth]{images/interp_extrap_diff_peak2.pdf}
-		\caption{MAE gains of LDS + FDS over the vanilla model.}
+		\caption{MAE gains of LDS + FDS over vanilla model.}
 	\end{figure}
 	\begin{itemize}
 		\item Performance gains, esp. for extrapolation \& interpolation
@@ -41,7 +41,7 @@
 \begin{frame}{Skewed label distribution with three Gaussian peaks}
 	\begin{figure}[h]
 		\includegraphics[width=0.7\linewidth]{images/interp_extrap_diff_peak3.pdf}
-		\caption{MAE gains of LDS + FDS over the vanilla model.}
+		\caption{MAE gains of LDS + FDS over vanilla model.}
 	\end{figure}
 	\begin{itemize}
 		\item Performance gains, esp. for extrapolation \& interpolation
@@ -52,7 +52,7 @@
 \begin{frame}{Skewed label distribution with four Gaussian peaks}
 	\begin{figure}[h]
 		\includegraphics[width=0.7\linewidth]{images/interp_extrap_diff_peak4.pdf}
-		\caption{MAE gains of LDS + FDS over the vanilla model.}
+		\caption{MAE gains of LDS + FDS over vanilla model.}
 	\end{figure}
 	\begin{itemize}
 		\item Performance gains, esp. for extrapolation \& interpolation
