--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Evaluation}
 	\begin{itemize}\setlength\itemsep{1.5em}
-		\item Divide target space into disjoint regions (bins)
+		\item<2-> Divide target space into disjoint regions (bins)
 		\begin{itemize}
 			\item \emph{Many-shot}: $>100$ training examples
 			\item \emph{Medium-shot}: $20$-$100$ training examples
@@ -8,7 +8,7 @@
 			\item \emph{Zero-shot}: $0$ training examples
 			\item[-] Inspired by \cite{liu2019large}
 		\end{itemize}
-		\item Metrics
+		\item<3-> Metrics
 		\begin{itemize}
 			\item Mean Absolute Error (MAE)
 			\item Mean Squared Error (MSE)
