--- a/sections/feature_statistics_similarity.tex
+++ b/sections/feature_statistics_similarity.tex
@@ -1,17 +1,16 @@
 \begin{frame}{Feature statistics similarity (1/4)}{Anchor age 30}
-	\begin{figure}[h]
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_base_30.pdf}
-			\caption{Baseline}
-		\end{subfigure}\hspace{1em}%
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_ours_30.pdf}
-			\caption{FDS}
-		\end{subfigure}
-		%\caption{}
-	\end{figure}
-	\vspace{-1em}
-	\begin{columns}
+	\begin{tikzpicture}[remember picture, overlay]
+		\node[right=0.28\textwidth,below=4.5em] at (current page.north west) 
+		{
+			\includegraphics[width=0.5\textwidth]{images/feat_sim_fds_base_30.pdf}
+		};
+		\node[left=0.27\textwidth,below=4.5em] at (current page.north east) 
+		{
+			\includegraphics[width=0.49\textwidth]{images/feat_sim_fds_ours_30.pdf}
+		};
+	\end{tikzpicture}
+	\vspace{0.45\textheight}
+	\begin{columns}[T]
 		\footnotesize
 		\begin{column}{0.5\textwidth}
 			\begin{itemize}
@@ -37,19 +36,18 @@
 \end{frame}
 
 \begin{frame}{Feature statistics similarity (2/4)}{Anchor age 60}
-	\begin{figure}[h]
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_base_60.pdf}
-			\caption{Baseline}
-		\end{subfigure}\hspace{1em}%
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_ours_60.pdf}
-			\caption{FDS}
-		\end{subfigure}
-		%\caption{}
-	\end{figure}
-	\vspace{-1em}
-	\begin{columns}
+	\begin{tikzpicture}[remember picture, overlay]
+		\node[right=0.28\textwidth,below=4.5em] at (current page.north west) 
+		{
+			\includegraphics[width=0.5\textwidth]{images/feat_sim_fds_base_60.pdf}
+		};
+		\node[left=0.27\textwidth,below=4.5em] at (current page.north east) 
+		{
+			\includegraphics[width=0.49\textwidth]{images/feat_sim_fds_ours_60.pdf}
+		};
+	\end{tikzpicture}
+	\vspace{0.45\textheight}
+	\begin{columns}[T]
 		\footnotesize
 		\begin{column}{0.5\textwidth}
 			\begin{itemize}
@@ -75,19 +73,18 @@
 \end{frame}
 
 \begin{frame}{Feature statistics similarity (3/4)}{Anchor age 0}
-	\begin{figure}[h]
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_base_0.pdf}
-			\caption{Baseline}
-		\end{subfigure}\hspace{1em}%
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_ours_0.pdf}
-			\caption{FDS}
-		\end{subfigure}
-		%\caption{}
-	\end{figure}
-	\vspace{-1em}
-	\begin{columns}
+	\begin{tikzpicture}[remember picture, overlay]
+		\node[right=0.28\textwidth,below=4.5em] at (current page.north west) 
+		{
+			\includegraphics[width=0.5\textwidth]{images/feat_sim_fds_base_0.pdf}
+		};
+		\node[left=0.27\textwidth,below=4.5em] at (current page.north east) 
+		{
+			\includegraphics[width=0.49\textwidth]{images/feat_sim_fds_ours_0.pdf}
+		};
+	\end{tikzpicture}
+	\vspace{0.45\textheight}
+	\begin{columns}[T]
 		\footnotesize
 		\begin{column}{0.5\textwidth}
 			\begin{itemize}
@@ -113,19 +110,18 @@
 \end{frame}
 
 \begin{frame}{Feature statistics similarity (4/4)}{Anchor age 90}
-	\begin{figure}[h]
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_base_90.pdf}
-			\caption{Baseline}
-		\end{subfigure}\hspace{1em}%
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_ours_90.pdf}
-			\caption{FDS}
-		\end{subfigure}
-		%\caption{}
-	\end{figure}
-	\vspace{-1em}
-	\begin{columns}
+	\begin{tikzpicture}[remember picture, overlay]
+		\node[right=0.28\textwidth,below=4.5em] at (current page.north west) 
+		{
+			\includegraphics[width=0.5\textwidth]{images/feat_sim_fds_base_90.pdf}
+		};
+		\node[left=0.27\textwidth,below=4.5em] at (current page.north east) 
+		{
+			\includegraphics[width=0.49\textwidth]{images/feat_sim_fds_ours_90.pdf}
+		};
+	\end{tikzpicture}
+	\vspace{0.45\textheight}
+	\begin{columns}[T]
 		\footnotesize
 		\begin{column}{0.5\textwidth}
 			\begin{itemize}
