--- a/sections/performance_comparison_to_imbalanced_classification_methods.tex
+++ b/sections/performance_comparison_to_imbalanced_classification_methods.tex
@@ -32,7 +32,7 @@
 		\begin{itemize}
 			\item can ignore similarity between nearby targets,
 			\item can ignore similarity between features linked to nearby targets,
-			\item cannot interpolate \& extrapolate in the continuous label space, so cannot deal with zero-shot label regions.
+			\item cannot interpolate \& extrapolate in continuous label space, so cannot deal with zero-shot label regions.
 		\end{itemize}
 	\end{itemize}
 	\credit{Table}{yang2021delving}
