--- a/sections/results.tex
+++ b/sections/results.tex
@@ -36,7 +36,7 @@
 	\end{table}
 	\begin{itemize}\fontsize{7pt}{7.2}\selectfont
 		\item Either LDS, FDS, or both leads to performance gains.
-		\item LDS + FDS often achieves the best results:
+		\item LDS + FDS often achieves best results:
 		\begin{itemize}\fontsize{7pt}{7.2}\selectfont
 			\item maintains or improves performance overall
 			and on many-shot regions,
@@ -82,7 +82,7 @@
 	\end{table}
 	\begin{itemize}\fontsize{7pt}{7.2}\selectfont
 		\item Either LDS, FDS, or both leads to performance gains.
-		\item LDS + FDS often achieves the best results:
+		\item LDS + FDS often achieves best results:
 		\begin{itemize}\fontsize{7pt}{7.2}\selectfont
 			\item maintains or improves performance overall
 			and on many-shot regions,
@@ -313,14 +313,14 @@
 		\begin{itemize}\tiny
 			%\item $11.4\%$ to $15.7\%$ relative MAE improvements in few-shot regions.
 			\item Smaller $\sigma$ usually leads to slightly better results over all regions. 
-			\item Larger gains w.r.t. the performance in medium-shot and few-shot regions.
+			\item Larger gains w.r.t. performance in medium-shot and few-shot regions.
 			\item Minor degradation in many-shot regions.
 		\end{itemize}
 		\item FDS
 		\vskip-1ex
 		\begin{itemize}\tiny
 			\item Smaller $l$ often obtains slightly higher improvements over all regions.
-			\item Equally boosts all the regions, with slightly smaller improvements in medium-shot and few-shot regions.
+			\item Equally boosts all regions, with slightly smaller improvements in medium-shot and few-shot regions.
 		\end{itemize}
 		\item $3.3$-$6.2\%$ overall MSE gain
 		\item Best results with $l=5$ and $\sigma=2$
