--- a/sections/performance_different_test_label_distributions.tex
+++ b/sections/performance_different_test_label_distributions.tex
@@ -24,7 +24,7 @@
 		\item Skewed label distribution for training set
 		\item Case: balanced label distribution for test set.
 		\begin{itemize}
-			\item LDS and FDS can improve the performance of all the regions.
+			\item LDS and FDS can improve performance of all regions.
 		\end{itemize}
 		\item Case: skewed label distribution for test set, 
 		\\same label distribution for training set.
