--- a/presentation.tex
+++ b/presentation.tex
@@ -134,8 +134,9 @@ ICML 2021
 
 \input{sections/feature_distribution_smoothing}
 
-\sectionframe{Experimental setup}
+\sectionframe{Experimental settings}
 \input{sections/baselines}
+\input{sections/network_architectures}
 
 \input{sections/results}
 
