--- a/references.bib
+++ b/references.bib
@@ -72,3 +72,38 @@
 	journal={arXiv preprint arXiv:1910.09217},
 	year={2019}
 }
+@inproceedings{he2016deep,
+	title={Deep residual learning for image recognition},
+	author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={770--778},
+	year={2016}
+}
+@inproceedings{hu2019revisiting,
+	title={Revisiting single image depth estimation: Toward higher resolution maps with accurate object boundaries},
+	author={Hu, Junjie and Ozay, Mete and Zhang, Yan and Okatani, Takayuki},
+	booktitle={2019 IEEE winter conference on applications of computer vision (WACV)},
+	pages={1043--1051},
+	year={2019},
+	organization={IEEE}
+}
+@inproceedings{wang2019bidirectional,
+	title={Bidirectional inference networks: A class of deep bayesian networks for health profiling},
+	author={Wang, Hao and Mao, Chengzhi and He, Hao and Zhao, Mingmin and Jaakkola, Tommi S and Katabi, Dina},
+	booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+	volume={33},
+	number={01},
+	pages={766--773},
+	year={2019}
+}
+@inproceedings{6ae80951321946a6aeec83a123d3d340,
+	title = "GLUE: A Multi-Task Benchmark and Analysis Platform for Natural Language Understanding",
+	author = "Alex Wang and Amanpreet Singh and Julian Michael and Felix Hill and Omer Levy and Bowman, {Samuel R.}",
+	year = "2018",
+	language = "English (US)",
+	series = "EMNLP 2018 - 2018 EMNLP Workshop BlackboxNLP: Analyzing and Interpreting Neural Networks for NLP, Proceedings of the 1st Workshop",
+	publisher = "Association for Computational Linguistics (ACL)",
+	pages = "353--355",
+	booktitle = "EMNLP 2018 - 2018 EMNLP Workshop BlackboxNLP",
+	note = "1st Workshop on BlackboxNLP: Analyzing and Interpreting Neural Networks for NLP, co-located with the 2018 Conference on Empirical Methods in Natural Language Processing, EMNLP 2018 ; Conference date: 01-11-2018",
+}
