--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -8,7 +8,7 @@
 			\item \emph{Zero-shot}: $0$ training examples
 			\item[-] Inspired by \cite{liu2019large}
 		\end{itemize}
-		\item<3-> Metrics
+		\item<3-> (main) Metrics
 		\begin{itemize}
 			\item Mean Absolute Error (MAE)
 			\item Mean Squared Error (MSE)
