--- a/sections/performance_comparison_to_imbalanced_classification_methods.tex
+++ b/sections/performance_comparison_to_imbalanced_classification_methods.tex
@@ -26,7 +26,7 @@
 	\end{table}
 	\begin{itemize}
 		\item Imbalanced regression methods outperform classification ones.
-		\item Can reduces error up to 50-60\% in few-shot regions
+		\item Can reduce error up to 50-60\% in few-shot regions
 		\item Imbalanced classification methods can perform worse than vanilla regression.
 		\item Main finding: imbalance regression requires something different than just imbalance classification methods, which
 		\begin{itemize}
