--- a/sections/diverse_skewed_label_densities.tex
+++ b/sections/diverse_skewed_label_densities.tex
@@ -6,17 +6,12 @@
 		\item Experimental setup
 		\begin{itemize}
 			\item Curated skewed label distributions with 1-4 Gaussian peaks on IMDB-WIKI-DIR
-			\item Compared with vanilla model
-		\end{itemize}
-		\item Findings
-		\begin{itemize}
-			\item Robustness to distribution change
-			\item Brings improvement
+			\item Compared to vanilla model
 		\end{itemize}
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Skewed label distribution with one Gaussian peak}
+\begin{frame}{Skewed label distribution with one Gaussian peak}{IMDB-WIKI}
 	\begin{figure}[h]
 		\includegraphics[width=0.7\linewidth]{images/interp_extrap_diff_peak1.pdf}
 		\caption{MAE gains of LDS + FDS over vanilla model.}
@@ -27,7 +22,7 @@
 	\credit{Image}{yang2021delving}
 \end{frame}
 
-\begin{frame}{Skewed label distribution with two Gaussian peaks}
+\begin{frame}{Skewed label distribution with two Gaussian peaks}{IMDB-WIKI}
 	\begin{figure}[h]
 		\includegraphics[width=0.7\linewidth]{images/interp_extrap_diff_peak2.pdf}
 		\caption{MAE gains of LDS + FDS over vanilla model.}
@@ -38,7 +33,7 @@
 	\credit{Image}{yang2021delving}
 \end{frame}
 
-\begin{frame}{Skewed label distribution with three Gaussian peaks}
+\begin{frame}{Skewed label distribution with three Gaussian peaks}{IMDB-WIKI}
 	\begin{figure}[h]
 		\includegraphics[width=0.7\linewidth]{images/interp_extrap_diff_peak3.pdf}
 		\caption{MAE gains of LDS + FDS over vanilla model.}
@@ -49,7 +44,7 @@
 	\credit{Image}{yang2021delving}
 \end{frame}
 
-\begin{frame}{Skewed label distribution with four Gaussian peaks}
+\begin{frame}{Skewed label distribution with four Gaussian peaks}{IMDB-WIKI}
 	\begin{figure}[h]
 		\includegraphics[width=0.7\linewidth]{images/interp_extrap_diff_peak4.pdf}
 		\caption{MAE gains of LDS + FDS over vanilla model.}
@@ -60,34 +55,49 @@
 	\credit{Image}{yang2021delving}
 \end{frame}
 
-\begin{frame}{Skewed label distribution with two Gaussian peaks on IMDB-WIKI-DIR}
-	\begin{table}[t]
-		\setlength{\tabcolsep}{1.5pt}
-		\small
-		\begin{center}
-			\resizebox{\textwidth}{!}{
-				\begin{tabular}{l|cccc|cccc}
-					\toprule[1.5pt]
-					Metrics      & \multicolumn{4}{c|}{MAE~$\downarrow$}       & \multicolumn{4}{c}{GM~$\downarrow$}    \\ \midrule
-					Shot         & All   & w/ data  & Interp. & Extrap.   & All   & w/ data  & Interp. & Extrap.   \\ \midrule\midrule
-					\textsc{Vanilla}      & 11.72 & 9.32 & 16.13  & 18.19 & 7.44 & 5.33 &  14.41  & 16.74 \\ \midrule\midrule
-					\textsc{Vanilla} + \textbf{\textsc{LDS}} &  10.54 &  8.31  &    14.14 & 17.38  & 6.50  & 4.67  & 12.13 & 15.36 \\[1.2pt]
-					\textsc{Vanilla} + \textbf{\textsc{FDS}} & 11.40 & 8.97 & 15.83  & 18.01  & 7.18  & 5.12 & 14.02 & 16.48 \\[1.2pt]
-					\textsc{Vanilla} + \textbf{\textsc{LDS}} + \textbf{\textsc{FDS}} & \textbf{10.27} & \textbf{8.11}  & \textbf{13.71} & \textbf{17.02}  & \textbf{6.33} & \textbf{4.55}  & \textbf{11.71}  & \textbf{15.13}  \\ \midrule\midrule
-					\textsc{\textbf{Ours~(best)} vs. Vanilla}   & \textcolor{darkgreen}{\textbf{+1.45}} & \textcolor{darkgreen}{\textbf{+1.21}} & \textcolor{darkgreen}{\textbf{+2.42}} & \textcolor{darkgreen}{\textbf{+1.17}} & \textcolor{darkgreen}{\textbf{+1.11}} & \textcolor{darkgreen}{\textbf{+0.78}} & \textcolor{darkgreen}{\textbf{+2.70}} & \textcolor{darkgreen}{\textbf{+1.61}} \\
-					\bottomrule[1.5pt]
-				\end{tabular}
-			}
-		\end{center}
-		\caption{Interpolation \& extrapolation results}
-	\end{table}
-	\begin{itemize}
-		\item Best results by smoothing both label \& feature distributions
+\begin{frame}{Could LDS + FDS help when label distribution is skewed with one or more Gaussian peaks?}
+	\begin{itemize}\setlength\itemsep{1.5em}
+		\item Experimental setup
+		\begin{itemize}
+			\item Curated skewed label distributions with 1-4 Gaussian peaks on IMDB-WIKI-DIR
+			\item Compared to vanilla model
+		\end{itemize}
+		\item Findings
+		\begin{itemize}
+			\item Robustness to distribution change
+			\item Brings improvement
+		\end{itemize}
 	\end{itemize}
-	\credit{Table}{yang2021delving}
 \end{frame}
 
-\begin{frame}{Different skewed label distributions on IMDB-WIKI-DIR}
+%\begin{frame}{Skewed label distribution with two Gaussian peaks}{IMDB-WIKI}
+%	\begin{table}[t]
+%		\setlength{\tabcolsep}{1.5pt}
+%		\small
+%		\begin{center}
+%			\resizebox{\textwidth}{!}{
+%				\begin{tabular}{l|cccc|cccc}
+%					\toprule[1.5pt]
+%					Metrics      & \multicolumn{4}{c|}{MAE~$\downarrow$}       & \multicolumn{4}{c}{GM~$\downarrow$}    \\ \midrule
+%					Shot         & All   & w/ data  & Interp. & Extrap.   & All   & w/ data  & Interp. & Extrap.   \\ \midrule\midrule
+%					\textsc{Vanilla}      & 11.72 & 9.32 & 16.13  & 18.19 & 7.44 & 5.33 &  14.41  & 16.74 \\ \midrule\midrule
+%					\textsc{Vanilla} + \textbf{\textsc{LDS}} &  10.54 &  8.31  &    14.14 & 17.38  & 6.50  & 4.67  & 12.13 & 15.36 \\[1.2pt]
+%					\textsc{Vanilla} + \textbf{\textsc{FDS}} & 11.40 & 8.97 & 15.83  & 18.01  & 7.18  & 5.12 & 14.02 & 16.48 \\[1.2pt]
+%					\textsc{Vanilla} + \textbf{\textsc{LDS}} + \textbf{\textsc{FDS}} & \textbf{10.27} & \textbf{8.11}  & \textbf{13.71} & \textbf{17.02}  & \textbf{6.33} & \textbf{4.55}  & \textbf{11.71}  & \textbf{15.13}  \\ \midrule\midrule
+%					\textsc{\textbf{Ours~(best)} vs. Vanilla}   & \textcolor{darkgreen}{\textbf{+1.45}} & \textcolor{darkgreen}{\textbf{+1.21}} & \textcolor{darkgreen}{\textbf{+2.42}} & \textcolor{darkgreen}{\textbf{+1.17}} & \textcolor{darkgreen}{\textbf{+1.11}} & \textcolor{darkgreen}{\textbf{+0.78}} & \textcolor{darkgreen}{\textbf{+2.70}} & \textcolor{darkgreen}{\textbf{+1.61}} \\
+%					\bottomrule[1.5pt]
+%				\end{tabular}
+%			}
+%		\end{center}
+%		\caption{Interpolation \& extrapolation results}
+%	\end{table}
+%	\begin{itemize}
+%		\item Best results by smoothing both label \& feature distributions
+%	\end{itemize}
+%	\credit{Table}{yang2021delving}
+%\end{frame}
+
+\begin{frame}{Different skewed label distributions}{IMDB-WIKI}
 	\begin{table}[t]
 		\setlength{\tabcolsep}{4.5pt}
 		\label{table:appendix-skewed-dist}
@@ -123,5 +133,10 @@
 			}
 		\end{center}
 	\end{table}
+	\begin{itemize}\fontsize{7pt}{7.2}\selectfont\setlength\itemsep{.5em}
+		\item Typically best overall results by LDS + FDS
+		\item Typically best many-shot results by LDS
+		\item LDS + FDS can degrade many-shot region
+	\end{itemize}
 	\credit{Table}{yang2021delving}
 \end{frame}
