Add summary slide

--- a/presentation.tex
+++ b/presentation.tex
@@ -140,6 +140,15 @@ ICML 2021
 
 \input{sections/results}
 
+\begin{frame}{Summary}
+	\begin{itemize}\setlength\itemsep{2em}
+		\item Learning from imbalanced data with continuous targets.
+		\item Generalization to the entire target range.
+		\item Exploiting similarity between nearby targets in both label and feature spaces.
+		\item Results on five curated large-scale real-world benchmarks in computer vision, natural language processing, and healthcare.
+	\end{itemize}
+\end{frame}
+
 \section{References}
 \begin{frame}[noframenumbering,plain,allowframebreaks]
 \frametitle{References}
