--- a/sections/ablation_gaussian_kernel_hyperparams.tex
+++ b/sections/ablation_gaussian_kernel_hyperparams.tex
@@ -98,7 +98,7 @@
 			}
 		\end{center}
 	\end{table}
-	\begin{itemize}
+	\begin{itemize}\footnotesize
 		\item Gaussian kernel size $l\in\{5,9,15\}$ and standard deviation $\sigma\in\{1,2,3\}$
 		\item $3.3$-$6.2\%$ overall MSE gain
 		\item Best results with $l=5$ and $\sigma=2$
