--- a/sections/performance_different_test_label_distributions.tex
+++ b/sections/performance_different_test_label_distributions.tex
@@ -20,15 +20,15 @@
 			}
 		\end{center}
 	\end{table}
-	\begin{itemize}
+	\begin{itemize}\footnotesize
 		\item Skewed label distribution for training set
 		\item Case: balanced label distribution for test set.
-		\begin{itemize}
+		\begin{itemize}\footnotesize
 			\item LDS and FDS can improve performance of all regions.
 		\end{itemize}
 		\item Case: skewed label distribution for test set, 
 		\\same label distribution for training set.
-		\begin{itemize}
+		\begin{itemize}\footnotesize
 			\item Minor degradation in many-shot region.
 			\item Boosts in medium-shot and few-shot regions.
 			\item Note: overall performance dominated by many-shot region, potentially biased and undesired evaluation.
