--- a/sections/feature_distribution_smoothing.tex
+++ b/sections/feature_distribution_smoothing.tex
@@ -73,7 +73,7 @@
 			\item Estimates mean $\bm{\mu}_b$ and covariance $\bm{\Sigma}_b$ feature statistics by each target bin.
 			\item Smooths feature statistics over target bins $\mathcal{B}$ by symmetric kernel $k(y_b,y_b')$. Obtains smoothed mean $\tilde{\bm{\mu}}_b$ and covariance $\tilde{\bm{\Sigma}}_b$ feature statistics.
 			\item Whitens features (\cite{sun2016return}): $\bm{z}^w = \bm{\Sigma}_b^{-\frac{1}{2}}(\bm{z} - \bm{\mu}_b)$
-			\item Re-colors whitened features (\cite{sun2016return}): $\bm{z}^r = \tilde{\bm{\Sigma}}_b \bm{z}^w + \tilde{\bm{\mu}}_b$
+			\item Re-colors whitened features (\cite{sun2016return}): $\bm{z}^r = \tilde{\bm{\Sigma}}_b^{\frac{1}{2}} \bm{z}^w + \tilde{\bm{\mu}}_b$
 		\end{itemize}
 		\item<3-> Integration into deep learning
 		\begin{itemize}
